# fruit_view

./: .gitignore  AGENTS.md  LICENSE  PRD.md  README.md  export_presets.cfg  project.godot
data/: telemetry_panel_layout.tres
deploy/: build.sh  check_opentrack.py  check_renderer.sh  deploy.sh  launch.sh  override.cfg  setup_pi.sh
docs/: vehicle-node-prd.md
docs/agents/: domain.md  issue-tracker.md
scenes/: main.tscn
scripts/: input_handler.gd  input_handler.gd.uid  main.gd  main.gd.uid
scripts/head_tracking/: head_tracker.gd  head_tracker.gd.uid  mouse_look_tracker.gd  mouse_look_tracker.gd.uid  opentrack_udp_tracker.gd  opentrack_udp_tracker.gd.uid
scripts/mesh/: hemisphere_mesh_builder.gd  hemisphere_mesh_builder.gd.uid
shaders/: hemisphere.gdshader  hemisphere.gdshader.uid
sidecar/: video_sidecar.py
tests/: README.md
vehicle_node/: README.md  pyproject.toml
vehicle_node/docs/: dry-run-workflow.md  image-layout.md  profile-schema.md  rc-protocol.md
vehicle_node/image/: Dockerfile  artifacts.lock.toml  build.sh
vehicle_node/image/scripts/: _common.py  fetch_artifacts.py  patch_image.py  render_runtime_settings.py  validate_image.py  validate_profile.py
vehicle_node/profiles/examples/: tracked.example.toml
vehicle_node/src/fruit_vehicle/: __init__.py  daemon.py  main.py  packet.py  profile.py  runtime_settings.py  session.py  telemetry.py
vehicle_node/tests/: test_daemon.py  test_image_validation.py  test_packet.py  test_profile.py  test_runtime_settings.py  test_session.py  test_telemetry.py
vehicle_node/tools/: send_test_rc_packet.py
(+28 files in other folders)
