[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fruit-vehicle-node"
version = "0.1.0"
description = "Vehicle-node image builder and dry-run daemon for fruit_view"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
